--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
+    "gray-matter": "^4.0.3",
     "next": "^13.2.4",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-scroll": "^1.8.9",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/nodemailer": "^6.4.7",
     "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
