--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint-config-next": "13.1.6",
     "gray-matter": "^4.0.3",
     "next": "^13.2.4",
-    "next-themes": "^0.2.1",
+    "next-themes": "npm:@wits/next-themes@^0.2.16",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
