--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "encoding": "^0.1.13",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
+    "googleapis": "^118.0.0",
     "gray-matter": "^4.0.3",
     "next": "^13.2.4",
     "next-themes": "npm:@wits/next-themes@^0.2.16",
@@ -25,6 +27,7 @@
     "react-scroll": "^1.8.9",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
+    "sweetalert2": "^11.7.3",
     "typescript": "4.9.4"
   },
   "devDependencies": {
